Made final changes to the website

--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -35,7 +35,7 @@
             <ul>
                 <li><a href="foreign-literature.html" class="header-nav-link">海外文学</a></li>
                 <li><a href="japanese-literature.html" class="header-nav-link">日本文学</a></li>
-                <li><a href="other-books.html" class="header-nav-link">その他作品</a></li>
+                <li><a href="other-books.html" class="header-nav-link">管理人お気に入り</a></li>
             </ul>
         </nav>
     </header>
@@ -46,39 +46,40 @@
 
         <section id="book-list" class="container">
             <div class="book-list-frame">
-                <a href="https://www.iwanami.co.jp/book/b247928.html" target="_blank">
-                    <div class="book-list-content" id="les_misérables">
-                        <img src="images/books/les_misérables.jpg" class="book-list-img" alt="レ・ミゼラブル">
-                        <div class="book-list-info">
-                            <h2 class="book-list-info-title">レ・ミゼラブル</h2>
-                            <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
-                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a
-                                        href="https://www.aozora.gr.jp/cards/001094/card42606.html" target="_blank"
-                                        class="book-list-info-link-aozora">青空文庫</a></object></div>
-                            <div class="book-list-info-description">
-                                <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
-                                <p class="book-list-info-description-sentence">
-                                    　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。
-                                </p>
-                            </div>
-                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                <div class="book-list-content" id="les_misérables">
+                    <img src="images/books/les_misérables.jpg" class="book-list-img" alt="レ・ミゼラブル">
+                    <div class="book-list-info">
+                        <h2 class="book-list-info-title">レ・ミゼラブル</h2>
+                        <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
+                        <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                        <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/001094/files/42606_25757.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b247928.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
+                        <div class="book-list-info-description">
+                            <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
+                            <p class="book-list-info-description-sentence">
+                                　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。
+                            </p>
                         </div>
+                        <p class="book-list-info-copy">書影: 岩波書店</p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="book-list-frame" id="tsumi-to-batsu">
-                <a href="https://www.iwanami.co.jp/book/b248196.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/tsumi-to-batsu.jpg" class="book-list-img" alt="罪と罰">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">罪と罰</h2>
                             <h4 class="book-list-info-writer">作: ドストエフスキー / 訳: 江川卓</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐</h4>
-                            <div class="book-list-info-link"><object><a
-                                        href="https://www.aozora.gr.jp/cards/000363/card56656.html" target="_blank"
-                                        class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000363/files/56656_74440.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b248196.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">倫理、思想、心理、幅広いテーマを包含する「現代の預言書」</h3>
                                 <p class="book-list-info-description-sentence">
@@ -88,20 +89,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="the-oldman-and-the-sea">
-                <a href="https://www.shinchosha.co.jp/book/210018/" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/the-oldman-and-the-sea.jpg" class="book-list-img" alt="老人と海">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">老人と海</h2>
                             <h4 class="book-list-info-writer">作: ヘミングウェイ / 訳: 高見浩</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a
-                                        href="https://www.aozora.gr.jp/cards/001847/card57347.html" target="_blank"
-                                        class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/001847/files/57347_57224.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.shinchosha.co.jp/book/210018/" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">老人と巨大な魚との死闘を描いた、人間の尊厳と悲劇の物語</h3>
                                 <p class="book-list-info-description-sentence">
@@ -111,43 +112,43 @@
                             <p class="book-list-info-copy">ヘミングウェイ/著, 高見浩/訳『老人と海』（新潮文庫刊）</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="faust">
-                <a href="https://www.iwanami.co.jp/book/b247629.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/faust.jpg" class="book-list-img" alt="ファウスト">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">ファウスト</h2>
                             <h4 class="book-list-info-writer">作: ゲーテ / 訳: 相良守峯</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐</h4>
-                            <div class="book-list-info-link"><object><a
-                                        href="https://www.aozora.gr.jp/cards/001025/card50909.html" target="_blank"
-                                        class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/001025/files/50909_49238.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b247629.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">詩人の天才ゲーテが、その一生を掛けて完成させた大作</h3>
                                 <p class="book-list-info-description-sentence">
-                                    　戯曲形式で書かれた悲劇の物語である。学問に絶望した大学者ファウストが、生の意義を得るため悪魔メフィストと契約し、メフィストはファウストを誘惑していく。人間の真の生き方とは何か、大文豪ゲーテがその思想を傾けつくした大作である。非常に難解。
+                                    　戯曲形式で書かれた悲劇の物語である。学問に絶望した大学者ファウストが、生の意義を得るため悪魔メフィストと契約し、メフィストはファウストを誘惑していく。人間の真の生き方とは何か、大文豪ゲーテがその思想を傾けつくした大作である。
                                 </p>
                             </div>
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="the-overcoat">
-                <a href="https://www.iwanami.co.jp/book/b248159.html" target="_blank">
                     <div class="book-list-content" id="the-overcoat">
                         <img src="images/books/the-overcoat.jpg" class="book-list-img" alt="外套">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">外套</h2>
                             <h4 class="book-list-info-writer">作: ゴーゴリ / 訳: 平井肇</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a
-                                        href="https://www.aozora.gr.jp/cards/000207/card357.html" target="_blank"
-                                        class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000207/files/357_22446.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b248159.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">ロシア文学最大の傑作「我々は皆ゴーゴリの『外套』から生まれたのだ」</h3>
                                 <p class="book-list-info-description-sentence">
@@ -157,20 +158,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="the-brothers-karamazov">
-                <a href="https://www.iwanami.co.jp/book/b248208.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/the-brothers-karamazov.jpg" class="book-list-img" alt="カラマーゾフの兄弟">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">カラマーゾフの兄弟</h2>
                             <h4 class="book-list-info-writer">作: ドストエフスキー / 訳: 米川正夫</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a
-                                        href="https://www.aozora.gr.jp/cards/000363/card42286.html" target="_blank"
-                                        class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000363/files/42286_37300.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b248208.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">あらゆるテーマを包含した、長編作品の最高傑作</h3>
                                 <p class="book-list-info-description-sentence">
@@ -180,17 +181,18 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
             
             <div class="book-list-frame" id="what-man-live-by">
-                <a href="https://www.iwanami.co.jp/book/b248233.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/what-man-live-by.jpg" class="book-list-img" alt="人はなんで生きるか">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">人はなんで生きるか</h2>
                             <h4 class="book-list-info-writer">作: トルストイ / 訳: 中村白葉</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.iwanami.co.jp/book/b248233.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">トルストイの宗教観が詰まった、晩年の力作</h3>
                                 <p class="book-list-info-description-sentence">
@@ -200,7 +202,6 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
         </section>
 
@@ -208,14 +209,8 @@
         <section id="footer">
             <div class="colophon-content">
                 <p class="colophon-links">
-                    <a href="#">Terms of Use</a>
-                    |
-                    <a href="#">Privacy Policy</a>
-                    |
-                    <a href="#">Cookie Preference</a>
-                </p>
                 <div class="copyright">
-                    <small>&copy; Copyright 2024 角田雄一</small>
+                    <small>CC 角田雄一</small>
                 </div>
             </div>
         </section>
