--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
             <ul>
                 <li><a href="foreign-literature.html" class="header-nav-link">海外文学</a></li>
                 <li><a href="japanese-literature.html" class="header-nav-link">日本文学</a></li>
-                <li><a href="other-books.html" class="header-nav-link">その他作品</a></li>
+                <li><a href="other-books.html" class="header-nav-link">管理人お気に入り</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!--main image-->
-        <section id="main-image">
-            <img src="images/main_image.jpg" alt="main image">
-        </section>
         
+        <br>
+        <br>
+        <br>
         <br>
 
         <!--about this site-->
@@ -49,22 +48,45 @@
             </h1>
             <br>
             <h3 class="introduction-content">
-                このサイトでは、古典を中心とした文学作品を紹介しています。
-                <br>
-                文学と名の付くものは古今東西、山のようにありますが、ここではおよそ名作として知られているような、誰が読んでもきっと満足できるであろう作品を中心に紹介しています。
+                　このサイトでは、古典を中心とした文学作品を紹介しています。文学と名の付くものは古今東西、山のようにありますが、ここではおよそ名作として知られているような、誰が読んでもきっと満足できるであろう作品を中心に紹介しています。
                 <br>
                 <br>
-                人は誰もが、人生に対する「問い」を抱いていると思います。文学作品は、その「問い」の自分なりの答えを見つけるための思考の触媒になるでしょう。
-                <br>
-                文学には中々ヘビーな作品も多いですが、どの作品も作者の生、労作の記録であり贈り物です。読めば、何かしら得るものはあると思います。
+                　ネタバレすることなく、作品の特徴やテーマ、読みやすさなど把握いただけるよう設計されているので、次に読む作品を探すためのツールとしてご利用頂けます。
                 <br>
                 <br>
-                作品一覧は上部ナビゲーションから御覧頂けます。基本的には青空文庫へのリンクが貼ってあるので、気になった作品をその場で読むことができます。
+                　作品一覧は上部ナビゲーションから御覧頂けます。基本的には青空文庫へのリンクが貼ってあるので、気になった作品をその場で読むことができます。
                 <br>
-                「その他作品」では番外編として、管理人のお気に入りの本を紹介しています。
+                <br>
+                　読み易さは星（⭐）の数五段階で表しています。なお、読み易さの目安や、作品のテーマ等の解釈は管理人の主観によるものです。あくまで参考程度にご覧いただければと思います。
+                <br>
+                <br>
+                　人は誰もが、人生に対する「問い」を抱いていると思います。文学作品はどの作品も、作者の生、労作の記録であり贈り物です。その「問い」の自分なりの答えを見つけるための思考の触媒となるでしょう。
                 <br>
                 <br>           
-                このサイトが、あなたの本選びの役に立てますと幸いです。
+                　このサイトが、あなたの本選びの役に立てますと幸いです。
+            </h3>
+        </section>
+        <br>
+
+        <section id="introduction" class="container">
+            <h1 class="introduction-title">
+                管理人について
+            </h1>
+            <br>
+            <h3 class="introduction-content">
+                　ただの落語好きの大学３年生です。大学では情報デザインを勉強しています。
+                <br>
+                <br>
+                　好きな落語家は三遊亭圓生。好きな、というより信仰しています。圓生、イコール落語の完成形です。このサイトでは圓生も得意としていた演目の、「<a href="japanese-literature.html#kaidan-botandourou" class="link-style">怪談牡丹燈籠</a>」も紹介しています。興味ある方は是非ご覧頂ください！
+                <br>
+                <br>
+                　文学で言うと、好きな作家はドストエフスキーとトルストイです。最近は中々読む時間が無いので、いつかじっくり読めたらいいなと思っています。
+                <br>
+                <br>
+                　未熟者なりに今回のサイトは頑張って背伸びして作ってみました！
+                <br>
+                <br>
+                　このサイトが少しでもあなたの本選びの役に立てますと幸いです。
             </h3>
         </section>
 
@@ -155,15 +177,8 @@
         <!-- footer -->
         <section id="footer">
             <div class="colophon-content">
-                <p class="colophon-links">
-                    <a href="#">Terms of Use</a>
-                    |  
-                    <a href="#">Privacy Policy</a>
-                    |
-                    <a href="#">Cookie Preference</a>
-                </p>
                 <div class="copyright">
-                    <small>&copy; Copyright 2024 角田雄一</small>
+                    <small>CC 角田雄一</small>
                 </div>
             </div>
         </section>
