--- a/japanese-literature.html
+++ b/japanese-literature.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="foreign-literature.html" class="header-nav-link">海外文学</a></li>
                 <li><a href="japanese-literature.html" class="header-nav-link">日本文学</a></li>
-                <li><a href="other-books.html" class="header-nav-link">その他作品</a></li>
+                <li><a href="other-books.html" class="header-nav-link">管理人お気に入り</a></li>
             </ul>
         </nav>
     </header>
@@ -47,7 +47,11 @@
                             <h2 class="book-list-info-title">出家とその弟子</h2>
                             <h4 class="book-list-info-writer">作: 倉田百三</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000256/card1412.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000256/files/1412_24371.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b249269.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">歎異抄の教えを戯曲化した、日本の宗教文学の傑作</h3>
                                 <p class="book-list-info-description-sentence">　浄土真宗の開祖「親鸞」を主人公とし、人間が持つ煩悩や罪業と信仰との葛藤を題材としている。ヒューマニズムで一貫された、純粋な作品。発表直後、当時の青年らに熱狂的に支持され、大ベストセラーになった。明解なストーリーで読みやすい。</p>
@@ -59,14 +63,17 @@
             </div>
 
             <div class="book-list-frame" id="gin-no-saji">
-                <a href="https://www.iwanami.co.jp/book/b249200.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/gin-no-saji.jpg" class="book-list-img" alt="銀の匙">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">銀の匙</h2>
                             <h4 class="book-list-info-writer">作: 中勘助</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/001799/card56638.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/001799/files/56638_61335.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b249200.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">少年時代の感情世界を書き表した、温かく、どこか懐かしい作品</h3>
                                 <p class="book-list-info-description-sentence">　なかなか開かなかった茶箪笥の抽匣（ひきだし）からみつけた銀の匙。伯母さんの無限の愛情に包まれて過ごした日々。少年時代の思い出を中勘助が自伝風に綴ったこの作品には、子ども自身の感情世界が、子どもが感じ体験したままに素直に描き出されている。</p>
@@ -74,18 +81,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="yashagaike">
-                <a href="https://www.iwanami.co.jp/book/b249089.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/yashagaike.jpg" class="book-list-img" alt="夜叉ヶ池">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">夜叉ヶ池</h2>
                             <h4 class="book-list-info-writer">作: 泉鏡花</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000050/card3407.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000050/files/3407_19566.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b249089.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">夜叉ヶ池の龍神伝説を題材とした、幻想の物語</h3>
                                 <p class="book-list-info-description-sentence">　人間の醜さ、愚かさを、現実と幻想の狭間で描いた作品。詩的で美しい日本語で書かれており、作品独特の世界観を際立たせている。泉鏡花が初めて著した戯曲であり、近年これを原作とする演劇も上演されている。</p>
@@ -93,18 +102,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="kusamakura">
-                <a href="https://www.iwanami.co.jp/book/b248806.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/kusamakura.jpg" class="book-list-img" alt="草枕">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">草枕</h2>
                             <h4 class="book-list-info-writer">作: 夏目漱石</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000148/card776.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000148/files/776_14941.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b248806.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">「非人情」の世界を描いた、漱石の芸術論が盛り込まれた作品</h3>
                                 <p class="book-list-info-description-sentence">　「いやな奴」で埋まっている人の世を脱し、「非人情」の人でなしの国に遊ぼうとする画工の物語。西洋化する日本における、漱石による東洋の芸術論や文学論がつづられており、その中で近代の危険性を表現している。</p>
@@ -112,18 +123,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
             
             <div class="book-list-frame" id="kaidan-botandourou">
-                <a href="https://www.iwanami.co.jp/book/b249108.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/kaidan-botandourou.jpg" class="book-list-img" alt="怪談牡丹燈籠">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">怪談牡丹燈籠</h2>
                             <h4 class="book-list-info-writer">作: 三遊亭圓朝</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000989/card2577.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000989/files/2577_38206.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b249108.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">多くの事件や登場人物が複雑に絡み合う、壮大なドラマ</h3>
                                 <p class="book-list-info-description-sentence">　大名人の落語家、三遊亭圓朝により口演された怪談話である。単なる幽霊話ではなく、仇討ちや殺人、母子再開など、多くの出来事が絡み合うドラマとなっている。幽霊より恐ろしい、人間の業が描かれている。</p>
@@ -131,18 +144,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="gingatetsudou-no-yoru">
-                <a href="https://www.iwanami.co.jp/book/b249307.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/gingatetsudou-no-yoru.jpg" class="book-list-img" alt="銀河鉄道の夜">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">銀河鉄道の夜</h2>
                             <h4 class="book-list-info-writer">作: 宮沢賢治</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000081/card456.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000081/files/456_15050.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b249307.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">言わずと知れた、日本を代表する童話作品</h3>
                                 <p class="book-list-info-description-sentence">　孤独な少年ジョバンニが、友人カムパネルラと銀河鉄道の旅をする物語。作者の独創的な世界観、夢と現実が交錯する幻想世界を描き出す表現力が遺憾なく発揮された、宮沢童話の最高傑作である。</p>
@@ -150,18 +165,20 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="toshishun">
-                <a href="https://www.iwanami.co.jp/book/b249288.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/toshishun.jpg" class="book-list-img" alt="杜子春">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">杜子春</h2>
                             <h4 class="book-list-info-writer">作: 芥川龍之介</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000879/card43015.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000879/files/43015_17432.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.iwanami.co.jp/book/b249288.html" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">短編の天才、芥川龍之介による中国の小説に基づく童話</h3>
                                 <p class="book-list-info-description-sentence">　自堕落な青年、杜子春が仙人と出会い、杜子春は仙術を手に入れるために試練を受ける物語。中国の古典を参考に書かれた作品だが、芥川は結末を原作とは大きく改変した。芥川らしい簡潔な筆致で読みやすい。</p>
@@ -169,22 +186,14 @@
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
-                </a>
             </div>
         </section>
         
         <!-- footer -->
         <section id="footer">
             <div class="colophon-content">
-                <p class="colophon-links">
-                    <a href="#">Terms of Use</a>
-                    |  
-                    <a href="#">Privacy Policy</a>
-                    |
-                    <a href="#">Cookie Preference</a>
-                </p>
                 <div class="copyright">
-                    <small>&copy; Copyright 2024 角田雄一</small>
+                    <small>CC 角田雄一</small>
                 </div>
             </div>
         </section>
