--- a/other-books.html
+++ b/other-books.html
@@ -29,28 +29,28 @@
             <ul>
                 <li><a href="foreign-literature.html" class="header-nav-link">海外文学</a></li>
                 <li><a href="japanese-literature.html" class="header-nav-link">日本文学</a></li>
-                <li><a href="other-books.html" class="header-nav-link">その他作品</a></li>
+                <li><a href="other-books.html" class="header-nav-link">管理人お気に入り</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <!--book-list-->
-        <h1 class="book-list-genre">その他作品</h1>
-
-        <h3 class="introduction-content">
+        <h3 class="introduction-content-otherbooks">
             ここでは番外編として、管理人のお気に入りの本を紹介します。
         </h3>
 
         <section id="book-list" class="container">
             <div class="book-list-frame" id="ningen-no-kensetsu">
-                <a href="https://www.shinchosha.co.jp/book/100708/" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/ningen-no-kensetsu.jpg" class="book-list-img" alt="人間の建設">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">人間の建設</h2>
                             <h4 class="book-list-info-writer">作: 小林秀雄 , 岡潔</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐</h4>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.shinchosha.co.jp/book/100708/" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">文系、理系の歴史的天才同士による対談</h3>
                                 <p class="book-list-info-description-sentence">
@@ -60,18 +60,20 @@
                             <p class="book-list-info-copy">小林秀雄/著, 岡潔/著, 『人間の建設』（新潮文庫刊）</p>
                         </div>
                     </div>
-                </a>
             </div>
 
             <div class="book-list-frame" id="notes-from-underground">
-                <a href="https://www.shinchosha.co.jp/book/201009/" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/notes-from-underground.jpg" class="book-list-img" alt="地下室の手記">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">地下室の手記</h2>
                             <h4 class="book-list-info-writer">作: ドストエフスキー / 訳: 江川卓</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000363/card57393.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><a
+                                    href="https://www.aozora.gr.jp/cards/000363/files/57393_66320.html" target="_blank"
+                                    class="book-list-info-link-aozora">青空文庫で読む</a> / <a
+                                    href="https://www.shinchosha.co.jp/book/201009/" target="_blank"
+                                    class="book-list-info-link-aozora">購入する</a></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">人間の持つ醜い性質、本性を描き出した黒い哲学書</h3>
                                 <p class="book-list-info-description-sentence">
@@ -81,22 +83,14 @@
                             <p class="book-list-info-copy">ドストエフスキー/著, 江川卓/訳, 『地下室の手記』（新潮文庫刊）</p>
                         </div>
                     </div>
-                </a>
             </div>
         </section>
         
         <!-- footer -->
         <section id="footer">
             <div class="colophon-content">
-                <p class="colophon-links">
-                    <a href="#">Terms of Use</a>
-                    |  
-                    <a href="#">Privacy Policy</a>
-                    |
-                    <a href="#">Cookie Preference</a>
-                </p>
                 <div class="copyright">
-                    <small>&copy; Copyright 2024 角田雄一</small>
+                    <small>CC 角田雄一</small>
                 </div>
             </div>
         </section>
